--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.6.23",
+    "@tanstack/react-query": "^5.7.2",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
