--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "swr": "^2.2.4",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0"
