--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-intersection-observer": "^9.5.3",
     "swr": "^2.2.4",
     "tailwindcss-animate": "^1.0.7",
+    "use-clipboard-copy": "^0.2.0",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
