--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@atproto/api": "^0.6.23",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-query": "^5.7.2",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
