--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^5.7.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
