--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@atproto/api": "^0.6.23",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^5.7.2",
+    "@tiptap/extension-character-count": "^2.1.13",
+    "@tiptap/extension-placeholder": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
     "tailwindcss-animate": "^1.0.7",
