--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "^5"
   }
 }
