--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@tanstack/react-query": "^5.7.2",
     "@tiptap/extension-character-count": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
-    "@tiptap/extension-paragraph": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
@@ -33,6 +32,7 @@
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.5.3",
     "tailwindcss-animate": "^1.0.7",
     "use-clipboard-copy": "^0.2.0",
