Add mention feature

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-query": "^5.7.2",
     "@tiptap/extension-character-count": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-mention": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/suggestion": "^2.1.13",
     "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
     "next": "14.0.1",
