--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/suggestion": "^2.1.13",
+    "browser-image-compression": "^2.0.2",
     "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
     "next": "14.0.1",
@@ -35,8 +36,10 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "tinyld": "^1.3.4",
     "use-clipboard-copy": "^0.2.0",
     "use-debounce": "^10.0.0"
   },
