--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/suggestion": "^2.1.13",
+    "@vercel/analytics": "^1.1.1",
     "browser-image-compression": "^2.0.2",
     "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
