--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@atproto/api": "^0.6.23",
+    "@atproto/api": "^0.7.4",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,7 +28,7 @@
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/suggestion": "^2.1.13",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.2",
     "browser-image-compression": "^2.0.2",
     "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
@@ -40,6 +40,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
+    "sharp": "^0.33.1",
     "tailwindcss-animate": "^1.0.7",
     "tinyld": "^1.3.4",
     "use-clipboard-copy": "^0.2.0",
@@ -54,8 +55,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.7",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5"
   }
