--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "tailwindcss-animate": "^1.0.7",
     "tinyld": "^1.3.4",
@@ -46,7 +47,6 @@
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
