Add list virtualization hooks (applied to profile cards for now)
Virtualize lists using TanStack Virtual v3. Should improve performance on low-end devices.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^5.17.1",
+    "@tanstack/react-virtual": "^3.0.1",
     "@tiptap/extension-character-count": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-mention": "^2.1.13",
