--- a/package.json
+++ b/package.json
@@ -18,29 +18,30 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@tanstack/react-query": "^5.17.1",
-    "@tiptap/extension-character-count": "^2.1.13",
-    "@tiptap/extension-link": "^2.1.13",
-    "@tiptap/extension-mention": "^2.1.13",
-    "@tiptap/extension-placeholder": "^2.1.13",
-    "@tiptap/pm": "^2.1.13",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
-    "@tiptap/suggestion": "^2.1.13",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.2",
+    "@tanstack/react-query": "^5.17.15",
+    "@tiptap/extension-character-count": "^2.1.16",
+    "@tiptap/extension-link": "^2.1.16",
+    "@tiptap/extension-mention": "^2.1.16",
+    "@tiptap/extension-placeholder": "^2.1.16",
+    "@tiptap/pm": "^2.1.16",
+    "@tiptap/react": "^2.1.16",
+    "@tiptap/starter-kit": "^2.1.16",
+    "@tiptap/suggestion": "^2.1.16",
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.5",
     "browser-image-compression": "^2.0.2",
     "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
-    "next": "14.0.4",
+    "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.0",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
+    "sharp": "^0.33.2",
     "tailwindcss-animate": "^1.0.7",
     "tinyld": "^1.3.4",
     "use-clipboard-copy": "^0.2.0",
@@ -48,12 +49,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.10.8",
-    "@types/react": "^18.2.47",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "3.4.1",
     "tailwindcss-animated": "^1.0.1",
