Rollback tiptap to previous version
There seems to be an issue with autofocus not triggering.

--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^5.17.19",
-    "@tiptap/extension-character-count": "^2.1.16",
-    "@tiptap/extension-link": "^2.1.16",
-    "@tiptap/extension-mention": "^2.1.16",
-    "@tiptap/extension-placeholder": "^2.1.16",
-    "@tiptap/pm": "^2.1.16",
-    "@tiptap/react": "^2.1.16",
-    "@tiptap/starter-kit": "^2.1.16",
-    "@tiptap/suggestion": "^2.1.16",
+    "@tiptap/extension-character-count": "2.1.16",
+    "@tiptap/extension-link": "2.1.16",
+    "@tiptap/extension-mention": "2.1.16",
+    "@tiptap/extension-placeholder": "2.1.16",
+    "@tiptap/pm": "2.1.16",
+    "@tiptap/react": "2.1.16",
+    "@tiptap/starter-kit": "2.1.16",
+    "@tiptap/suggestion": "2.1.16",
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.7",
     "browser-image-compression": "^2.0.2",
