--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/react": "2.1.16",
     "@tiptap/starter-kit": "2.1.16",
     "@tiptap/suggestion": "2.1.16",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.7",
     "browser-image-compression": "^2.0.2",
@@ -35,6 +36,7 @@
     "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
