--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.7.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,7 +19,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query": "^5.29.2",
     "@tiptap/extension-character-count": "2.1.16",
     "@tiptap/extension-link": "2.1.16",
     "@tiptap/extension-mention": "2.1.16",
@@ -42,25 +42,25 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "sharp": "^0.33.2",
+    "sharp": "^0.33.3",
     "tailwindcss-animate": "^1.0.7",
     "tinyld": "^1.3.4",
     "use-clipboard-copy": "^0.2.0",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.17",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.78",
+    "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.38",
     "tailwindcss": "3.4.1",
     "tailwindcss-animated": "^1.0.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
