--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.7",
+    "0g": "^0.0.9",
     "browser-image-compression": "^2.0.2",
     "emoji-mart": "^5.5.2",
     "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "npm": "^10.6.0",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
