--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.29.2",
     "@tiptap/extension-character-count": "2.1.16",
     "@tiptap/extension-link": "2.1.16",
