--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "@vidstack/react": "^1.12.9",
     "browser-image-compression": "^2.0.2",
     "emoji-mart": "^5.6.0",
     "jwt-decode": "^4.0.0",
