--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@atproto/api": "^0.13.5",
-    "@emoji-mart/data": "^1.2.1",
-    "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
@@ -35,7 +33,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "@vidstack/react": "^1.12.9",
     "browser-image-compression": "^2.0.2",
-    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
     "next": "14.2.9",
     "next-auth": "^4.24.5",
