--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-api": "lex gen-api ./types/atmosphere ./lexicons/**/*.json"
   },
   "dependencies": {
     "@atproto/api": "^0.13.11",
     "@atproto/identity": "^0.4.3",
+    "@atproto/lex-cli": "^0.5.2",
+    "@atproto/xrpc": "^0.6.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
@@ -36,6 +39,7 @@
     "browser-image-compression": "^2.0.2",
     "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
+    "multiformats": "^13.3.1",
     "next": "14.2.14",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
