--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.13.31",
+    "@atproto/oauth-client-node": "^0.2.8",
     "@mantine/carousel": "^7.16.2",
     "@mantine/code-highlight": "^7.16.2",
     "@mantine/core": "^7.16.2",
@@ -19,21 +20,30 @@
     "@mantine/notifications": "^7.16.2",
     "@mantine/spotlight": "^7.16.2",
     "@mantine/tiptap": "^7.16.2",
+    "@tailwindcss/postcss": "^4.0.1",
+    "@tanstack/react-query": "^5.65.1",
     "@tiptap/extension-link": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/react": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.0",
     "embla-carousel-react": "^7.1.0",
+    "iron-session": "^8.0.4",
     "next": "15.1.6",
+    "postcss": "^8.5.1",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "typescript": "^5"
